--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.31.0",
+    "@emotion/react": "^11.14.0",
     "@prisma/client": "^7.2.0",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
