--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsdom": "^27.4.0",
     "prettier": "^3.7.4",
     "prisma": "^7.2.0",
+    "sass": "^1.97.2",
     "typescript": "^5",
     "vitest": "^4.0.17"
   }
