--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,22 @@ jobs:
     name: Build
     needs: [test]
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_USER: ci
+          POSTGRES_PASSWORD: ci
+          POSTGRES_DB: ma_petite_compagnie
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    env:
+      DATABASE_URL: postgresql://ci:ci@localhost:5432/ma_petite_compagnie
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -68,8 +84,6 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npm run db:generate
-        env:
-          DATABASE_URL: postgresql://user:password@localhost:5432/db
       - run: npm run build
       - uses: actions/upload-artifact@v4
         with:
