--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@chakra-ui/react": "^3.31.0",
     "@emotion/react": "^11.14.0",
     "@prisma/client": "^7.2.0",
+    "jspdf": "^4.0.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
@@ -42,7 +43,7 @@
     "eslint-config-next": "16.1.1",
     "jsdom": "^27.4.0",
     "prettier": "^3.7.4",
-    "prisma": "^7.2.0",
+    "prisma": "^6.19.2",
     "typescript": "^5",
     "vitest": "^4.0.17"
   }
