--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "pg": "^8.17.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "styled-components": "^6.3.8"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
