--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.31.0",
+    "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.2.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
