--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "@emotion/react": "^11.14.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
-    "next": "16.1.1",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "pg": "^8.17.1",
-    "react": "19.2.3",
+    "react": "^19.2.4",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "styled-components": "^6.3.8"
@@ -47,7 +47,7 @@
     "eslint-config-next": "16.1.1",
     "jsdom": "^27.4.0",
     "prettier": "^3.7.4",
-    "prisma": "^7.2.0",
+    "prisma": "^6.19.2",
     "typescript": "^5",
     "vitest": "^4.0.17"
   }
