--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@chakra-ui/react": "^3.31.0",
     "@emotion/react": "^11.14.0",
     "@prisma/client": "^7.2.0",
-    "next": "16.1.1",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
