--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@emotion/react": "^11.14.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@react-pdf/renderer": "^4.3.2",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "pg": "^8.17.1",
