--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.31.0",
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^3.32.0",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "framer-motion": "^12.34.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "pg": "^8.17.1",
