--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@emotion/react": "^11.14.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
-    "next": "16.1.1",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "pg": "^8.17.1",
     "react": "19.2.3",
@@ -51,6 +51,7 @@
     "npm": "^11.8.0",
     "prettier": "^3.7.4",
     "prisma": "^7.2.0",
+    "sass": "^1.77.8",
     "styled-components": "^6.3.8",
     "typescript": "^5",
     "vitest": "^4.0.17"
