--- a/package.json
+++ b/package.json
@@ -22,17 +22,24 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.31.0",
-    "@emotion/react": "^11.14.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tailwindcss/postcss": "^4.1.18",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "pg": "^8.17.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
-    "styled-components": "^6.3.8"
+    "sonner": "^2.0.7",
+    "styled-components": "^6.3.8",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -44,14 +51,17 @@
     "@types/react-dom": "^19",
     "@types/styled-components": "^5.1.36",
     "@vitejs/plugin-react": "^5.1.2",
+    "autoprefixer": "^10.4.24",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "install": "^0.13.0",
     "jsdom": "^27.4.0",
     "npm": "^11.8.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "prisma": "^7.2.0",
     "styled-components": "^6.3.8",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5",
     "vitest": "^4.0.17"
   }
