--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@floating-ui/core": "^1.7.4",
+    "@floating-ui/dom": "^1.7.5",
+    "@floating-ui/react-dom": "^2.1.7",
+    "@floating-ui/utils": "^0.2.10",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
-    "framer-motion": "^12.34.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
@@ -33,6 +36,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.34.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "pg": "^8.17.1",
