--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/vite": "^4.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
@@ -67,7 +68,7 @@
     "prettier": "^3.7.4",
     "prisma": "^7.2.0",
     "styled-components": "^6.3.8",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^4.2.1",
     "typescript": "^5",
     "vitest": "^4.0.17"
   }
