Ajout formulaire contact et synchronisation avec Brevo

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 # Database
 DATABASE_URL="postgresql://mpc:mpc@localhost:5432/ma_petite_compagnie?schema=public"
+
+
+# Brevo
+BREVO_API_KEY=1 #modifier la Key API
+BREVO_LIST_ID=2
