--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@floating-ui/dom": "^1.7.5",
     "@floating-ui/react-dom": "^2.1.7",
     "@floating-ui/utils": "^0.2.10",
+    "@getbrevo/brevo": "^4.0.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -43,6 +44,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "sonner": "^2.0.7",
     "styled-components": "^6.3.8",
     "tailwind-merge": "^3.4.0"
